# Study

./: .gitignore  CMakeLists.txt  README.md
Demo-lmst/: CMakeLists.txt  CMakeSettings.json
Demo-lmst/src/: main.cpp
OpenGLDemo/: CMakeLists.txt
OpenGLDemo/include/glad/: glad.h
OpenGLDemo/lib/: glfw3.lib
OpenGLDemo/shader/: frag.shader  vert.shader
OpenGLDemo/src/: Camera.h  Shader.cpp  Shader.h  WindowMgr.h  glad.c  main.cpp
cmakeData/: cmake笔记.md  开发中cmake的相关的问题.md
config/: config.h.in
games202/homework0/src/loads/: loadOBJ.js
games202/homework0/src/shaders/: InternalShader.js
games202/homework1/hw1/homework1/src/lights/: DirectionalLight.js
games202/homework1/hw1/homework1/src/shaders/phongShader/: phongFragment.glsl
src/: main.cpp
